feat: move id to uri in update endpoint
